# rdmo-app

./: .gitignore  pyproject.toml
config/: urls.py
config/settings/: __init__.py  base.py  development.py  sample.local.py
config/settings/components/: cache.py  email.py  export_import.py  logging.py
config/settings/components/auth/: allauth.py  ldap.py  shibboleth.py
config/settings/environments/: development.py
requirements/: base.txt  ldap.txt
